# PhD_RAG

./: .coverage  .env.example  .gitignore  README.md  bge_m3_retrieved_dataset.json  coverage.xml  pyproject.toml
.github/workflows/: Test.yml
Data/MD_handbooks/: csi-phd-handbook-2024.pdf.md  laney-graduate-studies-handbook-cleaned.md
Data/data_preprocessing/: unnecessary_text_removal.py
Data/qa/: bge_retrieved_dataset.json  claude_qa_pairs.json  new_claude_qa_pairs.json
PhD_RAG/src/: cli.py  config.py  main.py  models.py
PhD_RAG/src/api/: chatbot.py  router.py  services.py
PhD_RAG/src/database/: bge_m3.py  bge_m3_large_en_v1_5.py  core.py  embedding_model_client.py  router.py  services.py  utils.py
PhD_RAG/src/evaluation/: prompts.py  router.py  services.py
data_preprocessing/: unnecessary_text_removal.py
database/: handbook_docs.db  handbooks.db
