[project]
name = "phd-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Chung",email = "achun46@emory.edu"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain (>=0.3.14,<0.4.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pymilvus[model] (>=2.5.3,<3.0.0)",
    "huggingface (>=0.0.1,<0.0.2)",
    "langchain-milvus (>=0.1.8,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.9.2"

